--- a/sql.html
+++ b/sql.html
@@ -101,10 +101,10 @@
                   >About</a
                 >
                 <div class="dropdown-menu rounded-0 m-0">
-                  <a href="education.html" class="dropdown-item"
-                    >Education</a
+                  <a href="education.html" class="dropdown-item">Education</a>
+                  <a href="work.html" class="dropdown-item"
+                    >Working Experience</a
                   >
-                  <a href="work.html" class="dropdown-item">Working Experience</a>
                   <a href="skills.html" class="dropdown-item">Skills</a>
                   <a href="about.html" class="dropdown-item">About</a>
                 </div>
@@ -118,19 +118,17 @@
                   >WEB DEVELOPEMENT</a
                 >
                 <div class="dropdown-menu rounded-0 m-0">
-                  <a href="frontend.html" class="dropdown-item"
-                    >Frontend</a
-                  >
+                  <a href="frontend.html" class="dropdown-item">Frontend</a>
                   <a href="backend.html" class="dropdown-item">Backend</a>
                   <a href="fullstack.html" class="dropdown-item">Fullstack</a>
                   <a href="ui/ux.html" class="dropdown-item">UI/UX</a>
                 </div>
-              
+              </div>
+            </div>
           </div>
         </nav>
       </div>
       <!-- Navbar End -->
-
 
       <!-- Footer Start -->
       <div
