--- a/trade2023.html
+++ b/trade2023.html
@@ -130,6 +130,210 @@
       </div>
       <!-- Navbar End -->
 
+      <!-- OVERVIEW -->
+      <section class="trade2023">
+        <div class="trade-analysis">
+          <div class="overview-text">
+            <h1>Overview</h1>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse
+              corporis a praesentium tempora dolore quis deleniti, dolorem
+              ratione ducimus fugit repellendus voluptatem ipsam architecto.
+              Repudiandae delectus laboriosam labore adipisci ad voluptatum ipsa
+              odio fugit. Et quis, esse quae repellat impedit, suscipit,
+              incidunt vel dicta aliquid nam ut quidem ab sit.
+            </p>
+            <h1><u>Aim</u></h1>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad
+              aliquid, non vel nobis porro voluptas!
+            </p>
+            <h1><u>Tools used</u></h1>
+            <ul class="tools-list">
+              <li class="tools-item">Google Sheet</li>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Inventore ex sint cum ipsa. Sit, aut?.
+              </p>
+              <li class="tools-item">
+                MySQL
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
+                  quaerat deserunt doloribus, ea quo cupiditate.
+                </p>
+              </li>
+              <li class="tools-item">
+                PowerBI
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque
+                  corrupti provident maxime, in ipsa repellendus.
+                </p>
+              </li>
+            </ul>
+            <h1><u>Trade Summary</u></h1>
+            <p></p>
+            <ul class="analysis-list">
+              <li class="analysis-item">Total Trade = N71 billion</li>
+              <li class="analysis-item">Total import = N71 billion</li>
+              <li class="analysis-item">Total export = N71 billion</li>
+              <li class="analysis-item">Trade Balance = N71 billion</li>
+            </ul>
+          </div>
+          <img
+            style="width: 100%"
+            src="my images/analysis/new home.jpg"
+            alt=""
+          />
+        </div>
+      </section>
+
+      <!------trade import overview-->
+      <section class="trade-import">
+        <div class="import-overview">
+          <div class="import-text">
+            <h1><u>IMPORT ANALYSIS</u></h1>
+            <br />
+            <h4>Total Import = N35,917,619,307.64</h4>
+            <h5>% of Total Trade = 49.97%</h5>
+            <br />
+            <div class="import-card">
+              <div class="import-partners">
+                <div class="import-partners-text">
+                  <h5><h5>Major Import Trading Partner</h5></h5>
+                </div>
+                <ul>
+                  <li>Asia = N19 billion</li>
+                  <li>Europe = N12 billion</li>
+                  <li>America = N4 billion</li>
+                  <li>Africa = N896 million</li>
+                </ul>
+              </div>
+              <div class="import-categories">
+                <ul>
+                  <h5>Import by Categories</h5>
+                  <li>Agriculture = N2 billion</li>
+                  <li>Other Oil = N12 billion</li>
+                  <li>Raw Materials = N3 billion</li>
+                  <li>Manufactured Goods = N18 billion</li>
+                  <li>Solid Materials = N191 million</li>
+                  <li>Energy = N207 thousand</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <img
+            src="my images/analysis/new im.jpg"
+            alt=""
+            style="width: 100%; margin-top: -2rem"
+          />
+        </div>
+      </section>
+      <!------trade import end-->
+
+      <!------trade export overview-->
+      <section class="trade-export">
+        <div class="export">
+          <div class="export">
+            <h1><u>EXPORT ANALYSIS</u></h1>
+            <br />
+            <h4>Total Export = N35,962,392,442.69</h4>
+            <h5>% of Total Trade = 50.03%</h5>
+            <br />
+            <div class="export-card">
+              <div class="export-partners">
+                <div class="export-partners-text">
+                  <h5><h5>Major export Trading Partner</h5></h5>
+                </div>
+                <ul>
+                  <li>Asia = N10 billion</li>
+                  <li>Europe = N16 billion</li>
+                  <li>America = N6 billion</li>
+                  <li>Africa = N4 billion</li>
+                </ul>
+              </div>
+              <div class="export-categories">
+                <ul>
+                  <h5>Export by Categories</h5>
+                  <li>Crude Oil = N29 billion</li>
+                  <li>Agriculture = N1 billion</li>
+                  <li>Other Oil = N4 billion</li>
+                  <li>Raw Materials = N864 million</li>
+                  <li>Manufactured Goods = N778 million</li>
+                  <li>Solid Materials = N138 million</li>
+                  <li>Energy = N89 million</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <img
+            src="my images/analysis/new ex.jpg"
+            alt=""
+            style="width: 100%; margin-top: 0.1rem"
+          />
+        </div>
+      </section>
+      <!------trade export end-->
+
+      <!------trade transport end-->
+      <section class="trade-transport">
+        <div class="transport">
+          <div class="transport">
+            <h1><u> MODE OF TRANSPORTATION</u></h1>
+            <br />
+            <h4>Total Trade = N71,880,011,750.32</h4>
+
+            <div class="ports-card">
+              <div class="media-export">
+                <h5><h5>Media Used (EXPORT)</h5></h5>
+                <ul>
+                  <li>Maritime = N10 billion</li>
+                  <li>Air = N16 billion</li>
+                  <li>Land = N6 billion</li>
+                </ul>
+              </div>
+              <div class="media-import">
+                <h5><h5>Media Port Used (IMPORT)</h5></h5>
+                <ul>
+                  <li>Maritime = N10 billion</li>
+                  <li>Air = N16 billion</li>
+                  <li>Land = N6 billion</li>
+                </ul>
+              </div>
+
+              <div class="ports-export">
+                <h5><h5>Major Port Used (EXPORT)</h5></h5>
+                <ul>
+                  <li>Apapa Port = N10 billion</li>
+                  <li>Tin Can = N16 billion</li>
+                  <li>Port-Harcourt Port = N6 billion</li>
+                  <li>Muritala Muhammed Cargo = N4 billion</li>
+                  <li>Seme Border Port = N4 billion</li>
+                </ul>
+              </div>
+
+              <div class="ports-import">
+                <h5>Major Port Used (IMPORT)</h5>
+                <ul>
+                  <li>Apapa Port = N29 billion</li>
+                  <li>Tin Can = N1 billion</li>
+                  <li>Port-Harcourt Port = N4 billion</li>
+                  <li>PTML custom office = N864 million</li>
+                  <li>Muritala Muhamed Cargo = N778 million</li>
+                  <li>Solid Materials = N138 million</li>
+                  <li>Energy = N89 million</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <img
+            src="my images/analysis/new tr.jpg"
+            alt=""
+            style="width: 100%; margin-top: 0.1rem"
+          />
+        </div>
+      </section>
+      <!------trade transport end-->
+
       <!-- Footer Start -->
       <div
         class="container-fluid bg-dark text-white-50 footer pt-5 mt-5 wow fadeIn"
