--- a/skills.html
+++ b/skills.html
@@ -101,10 +101,10 @@
                   >About</a
                 >
                 <div class="dropdown-menu rounded-0 m-0">
-                  <a href="education.html" class="dropdown-item"
-                    >Education</a
+                  <a href="education.html" class="dropdown-item">Education</a>
+                  <a href="work.html" class="dropdown-item"
+                    >Working Experience</a
                   >
-                  <a href="work.html" class="dropdown-item">Working Experience</a>
                   <a href="skills.html" class="dropdown-item">Skills</a>
                   <a href="about.html" class="dropdown-item">About</a>
                 </div>
@@ -118,166 +118,172 @@
                   >WEB DEVELOPEMENT</a
                 >
                 <div class="dropdown-menu rounded-0 m-0">
-                  <a href="frontend.html" class="dropdown-item"
-                    >Frontend</a
-                  >
+                  <a href="frontend.html" class="dropdown-item">Frontend</a>
                   <a href="backend.html" class="dropdown-item">Backend</a>
                   <a href="fullstack.html" class="dropdown-item">Fullstack</a>
                   <a href="ui/ux.html" class="dropdown-item">UI/UX</a>
                 </div>
-              
+              </div>
+            </div>
           </div>
         </nav>
       </div>
       <!-- Navbar End -->
 
+      <!-- Footer Start -->
+      <div
+        class="container-fluid bg-dark text-white-50 footer pt-5 mt-5 wow fadeIn"
+        data-wow-delay="0.1s"
+      >
+        <div class="container py-5">
+          <div class="row g-5">
+            <div class="col-lg-3 col-md-6">
+              <h5 class="text-white mb-4">Get In Touch</h5>
+              <p class="mb-2">
+                <i class="fa fa-map-marker-alt me-3"></i>Bariga, Lagos State,
+                Nigeria
+              </p>
+              <p class="mb-2">
+                <i class="fa fa-phone-alt me-3"></i>+234 81 62636921
+              </p>
+              <p class="mb-2">
+                <i class="fa fa-envelope me-3"></i
+                >boluwatifeoladimeji99@gmail.com
+              </p>
+              <div class="d-flex pt-2">
+                <a class="btn btn-outline-light btn-social" href=""
+                  ><i class="fab fa-twitter"></i
+                ></a>
+                <a class="btn btn-outline-light btn-social" href=""
+                  ><i class="fab fa-facebook-f"></i
+                ></a>
+                <a class="btn btn-outline-light btn-social" href=""
+                  ><i class="fab fa-youtube"></i
+                ></a>
+                <a class="btn btn-outline-light btn-social" href=""
+                  ><i class="fab fa-linkedin-in"></i
+                ></a>
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-6">
+              <h5 class="text-white mb-4">Quick Links</h5>
+              <a class="btn btn-link text-white-50" href="cv.html">C.V</a>
+              <a class="btn btn-link text-white-50" href="project.html"
+                >Pojects</a
+              >
+              <a class="btn btn-link text-white-50" href="contact.html"
+                >Contact</a
+              >
+              <a class="btn btn-link text-white-50" href="privacy.html"
+                >Privacy Policy</a
+              >
+              <a class="btn btn-link text-white-50" href=""
+                >Terms & Condition</a
+              >
+            </div>
+            <div class="col-lg-3 col-md-6">
+              <h5 class="text-white mb-4">Photo Gallery</h5>
+              <div class="row g-2 pt-2">
+                <div class="col-4">
+                  <img
+                    class="img-fluid rounded bg-light p-1"
+                    src="my images/analysis/POWER.png"
+                    alt=""
+                  />
+                </div>
+                <div class="col-4">
+                  <img
+                    class="img-fluid rounded bg-light p-1"
+                    src="my images/analysis/retail 2.png"
+                    alt=""
+                  />
+                </div>
+                <div class="col-4">
+                  <img
+                    class="img-fluid rounded bg-light p-1"
+                    src="my images/analysis/RETAIL.png"
+                    alt=""
+                  />
+                </div>
+                <div class="col-4">
+                  <img
+                    class="img-fluid rounded bg-light p-1"
+                    src="my images/analysis/POWER.png"
+                    alt=""
+                  />
+                </div>
+                <div class="col-4">
+                  <img
+                    class="img-fluid rounded bg-light p-1"
+                    src="my images/analysis/RETAIL.png"
+                    alt=""
+                  />
+                </div>
+                <div class="col-4">
+                  <img
+                    class="img-fluid rounded bg-light p-1"
+                    src="my images/analysis/retail 2.png"
+                    alt=""
+                  />
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-6">
+              <h5 class="text-white mb-4">Newsletter</h5>
+              <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
+              <div class="position-relative mx-auto" style="max-width: 400px">
+                <input
+                  class="form-control bg-transparent w-100 py-3 ps-4 pe-5"
+                  type="text"
+                  placeholder="Your email"
+                />
+                <button
+                  type="button"
+                  class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2"
+                >
+                  SignUp
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="container">
+          <div class="copyright">
+            <div class="row">
+              <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+                &copy; <a class="border-bottom" href="#">Your Site Name</a>, All
+                Right Reserved. Designed By
+                <a class="border-bottom" href="">your Site name</a>
+              </div>
+              <div class="col-md-6 text-center text-md-end">
+                <div class="footer-menu">
+                  <a href="">Home</a>
+                  <a href="">Cookies</a>
+                  <a href="">Help</a>
+                  <a href="">FQAs</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Footer End -->
 
-     <!-- Footer Start -->
-     <div
-     class="container-fluid bg-dark text-white-50 footer pt-5 mt-5 wow fadeIn"
-     data-wow-delay="0.1s"
-   >
-     <div class="container py-5">
-       <div class="row g-5">
-         <div class="col-lg-3 col-md-6">
-           <h5 class="text-white mb-4">Get In Touch</h5>
-           <p class="mb-2">
-             <i class="fa fa-map-marker-alt me-3"></i>Bariga, Lagos State, Nigeria
-           </p>
-           <p class="mb-2">
-             <i class="fa fa-phone-alt me-3"></i>+234 81 62636921
-           </p>
-           <p class="mb-2">
-             <i class="fa fa-envelope me-3"></i>boluwatifeoladimeji99@gmail.com
-           </p>
-           <div class="d-flex pt-2">
-             <a class="btn btn-outline-light btn-social" href=""
-               ><i class="fab fa-twitter"></i
-             ></a>
-             <a class="btn btn-outline-light btn-social" href=""
-               ><i class="fab fa-facebook-f"></i
-             ></a>
-             <a class="btn btn-outline-light btn-social" href=""
-               ><i class="fab fa-youtube"></i
-             ></a>
-             <a class="btn btn-outline-light btn-social" href=""
-               ><i class="fab fa-linkedin-in"></i
-             ></a>
-           </div>
-         </div>
-         <div class="col-lg-3 col-md-6">
-           <h5 class="text-white mb-4">Quick Links</h5>
-           <a class="btn btn-link text-white-50" href="cv.html">C.V</a>
-           <a class="btn btn-link text-white-50" href="project.html">Pojects</a>
-           <a class="btn btn-link text-white-50" href="contact.html">Contact</a>
-           <a class="btn btn-link text-white-50" href="privacy.html">Privacy Policy</a>
-           <a class="btn btn-link text-white-50" href=""
-             >Terms & Condition</a
-           >
-         </div>
-         <div class="col-lg-3 col-md-6">
-           <h5 class="text-white mb-4">Photo Gallery</h5>
-           <div class="row g-2 pt-2">
-             <div class="col-4">
-               <img
-                 class="img-fluid rounded bg-light p-1"
-                 src="my images/analysis/POWER.png"
-                 alt=""
-               />
-             </div>
-             <div class="col-4">
-               <img
-                 class="img-fluid rounded bg-light p-1"
-                 src="my images/analysis/retail 2.png"
-                 alt=""
-               />
-             </div>
-             <div class="col-4">
-               <img
-                 class="img-fluid rounded bg-light p-1"
-                 src="my images/analysis/RETAIL.png"
-                 alt=""
-               />
-             </div>
-             <div class="col-4">
-               <img
-                 class="img-fluid rounded bg-light p-1"
-                 src="my images/analysis/POWER.png"
-                 alt=""
-               />
-             </div>
-             <div class="col-4">
-               <img
-                 class="img-fluid rounded bg-light p-1"
-                 src="my images/analysis/RETAIL.png"
-                 alt=""
-               />
-             </div>
-             <div class="col-4">
-               <img
-                 class="img-fluid rounded bg-light p-1"
-                 src="my images/analysis/retail 2.png"
-                 alt=""
-               />
-             </div>
-           </div>
-         </div>
-         <div class="col-lg-3 col-md-6">
-           <h5 class="text-white mb-4">Newsletter</h5>
-           <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
-           <div class="position-relative mx-auto" style="max-width: 400px">
-             <input
-               class="form-control bg-transparent w-100 py-3 ps-4 pe-5"
-               type="text"
-               placeholder="Your email"
-             />
-             <button
-               type="button"
-               class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2"
-             >
-               SignUp
-             </button>
-           </div>
-         </div>
-       </div>
-     </div>
-     <div class="container">
-       <div class="copyright">
-         <div class="row">
-           <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-             &copy; <a class="border-bottom" href="#">Your Site Name</a>, All
-             Right Reserved. Designed By
-             <a class="border-bottom" href="">your Site name</a>
-           </div>
-           <div class="col-md-6 text-center text-md-end">
-             <div class="footer-menu">
-               <a href="">Home</a>
-               <a href="">Cookies</a>
-               <a href="">Help</a>
-               <a href="">FQAs</a>
-             </div>
-           </div>
-         </div>
-       </div>
-     </div>
-   </div>
-   <!-- Footer End -->
+      <!-- Back to Top -->
+      <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"
+        ><i class="bi bi-arrow-up"></i
+      ></a>
+    </div>
 
-   <!-- Back to Top -->
-   <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"
-     ><i class="bi bi-arrow-up"></i
-   ></a>
- </div>
+    <!-- JavaScript Libraries -->
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="lib/wow/wow.min.js"></script>
+    <script src="lib/easing/easing.min.js"></script>
+    <script src="lib/waypoints/waypoints.min.js"></script>
+    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
 
- <!-- JavaScript Libraries -->
- <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
- <script src="lib/wow/wow.min.js"></script>
- <script src="lib/easing/easing.min.js"></script>
- <script src="lib/waypoints/waypoints.min.js"></script>
- <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-
- <!-- Template Javascript -->
- <script src="js/main.js"></script>
-</body>
+    <!-- Template Javascript -->
+    <script src="js/main.js"></script>
+  </body>
 </html>
