--- a/cv.html
+++ b/cv.html
@@ -93,22 +93,6 @@
                   <a href="powerpoint.html" class="dropdown-item">POWERPOINT</a>
                 </div>
               </div>
-              <div class="nav-item dropdown">
-                <a
-                  href="#"
-                  class="nav-link dropdown-toggle"
-                  data-bs-toggle="dropdown"
-                  >About</a
-                >
-                <div class="dropdown-menu rounded-0 m-0">
-                  <a href="education.html" class="dropdown-item">Education</a>
-                  <a href="work.html" class="dropdown-item"
-                    >Working Experience</a
-                  >
-                  <a href="skills.html" class="dropdown-item">Skills</a>
-                  <a href="about.html" class="dropdown-item">About</a>
-                </div>
-              </div>
 
               <div class="nav-item dropdown">
                 <a
@@ -129,6 +113,231 @@
         </nav>
       </div>
       <!-- Navbar End -->
+
+      <!-- cv header -->
+
+      <header>
+        <div class="sum">
+          <h4 style="margin-top: 2rem">
+            Experience: 3 years | Available: Immediately | Location: Lagos
+          </h4>
+        </div>
+        <p>oladimejiboluwatife99@gmail.com</p>
+        <p>
+          +234 81 6263 6921 | Linkedin: www.linkedin.com/in/oladimeji-boluwatife
+        </p>
+        <br /><br />
+        <h3 style="color: red">About me----------</h3>
+        <br />
+        <div class="about-me">
+          <h5>
+            I am a hard-working and driven individual who isn't afraid to face a
+            challenge. I'm passionateabout my work and I know how to get the job
+            done. <br /><br />
+            I would describe myself as an open and honest person who doesn't
+            believe in misleading other people and tries to be fair in
+            everything I do. <br /><br />
+            I have experience working in the health, education enviromental and
+            consultancy sector all which have taught me how to approach
+            different kinds of situation analytically and meticulously while
+            also harnessing my leadership skills over the years. <br /><br />
+            I am currently training to be a Data and Business Analyst which I
+            feel will be of importance to me personally and to any place i might
+            find myself.
+          </h5>
+          <br /><br />
+        </div>
+
+        <h3 style="color: green">Work Experience----------</h3>
+        <br />
+        <div class="work-experience">
+          <div class="peak">
+            <h5>Peak Health Hospital (SIWES)</h5>
+            <br />
+            <p>laboratory Assistant</p>
+            <p>Internship</p>
+            <p>Lagos, Nigeria</p>
+            <p>6 Months</p>
+            <p>
+              <span style="color: green">2018-04-01</span> |
+              <span style="color: red">2018-09-01</span>
+            </p>
+            <p>
+              Attending to walk in patients requesting laboratory testing
+              services. <br />Conduct lab testing relating to Malaria, typhoid,
+              HIV and genotype, blood group, urinalysis, andsyphilis etc.
+              <br />Sterilize and prepare laboratory equipment. <br />Cleaning
+              of laboratory equipment’s after testing. <br />Calling patients to
+              pick up test results. <br />Observe lab scientist during critical
+              laboratory testing. Peak
+            </p>
+          </div>
+          <div class="Medlab">
+            <h5>Medlab Biomedics (3 Months Asuu Strike)</h5>
+            <br />
+            <p>laboratory Assistant</p>
+            <p>Internship</p>
+            <p>Lagos, Nigeria</p>
+            <p>3 Months</p>
+            <p>
+              <span style="color: green">2018-11-01</span> |
+              <span style="color: red">2019-02-01</span>
+            </p>
+            <p>
+              Attending to walk in patients requesting laboratory testing
+              services. <br />Conduct lab testing relating to Malaria, typhoid,
+              HIV and genotype, blood group, urinalysis, andsyphilis etc.
+              <br />Sterilize and prepare laboratory equipment. <br />Cleaning
+              of laboratory equipment’s after testing. <br />Calling patients to
+              pick up test results. <br />Observe lab scientist during critical
+              laboratory testing.
+            </p>
+          </div>
+
+          <div class="Medlab">
+            <h5>Medlab Biomedic (COVID-19) + ASUU Strike</h5>
+            <br />
+            <p>laboratory Assistant</p>
+            <p>Internship</p>
+            <p>Lagos, Nigeria</p>
+            <p></p>
+            <p>
+              <span style="color: green">2020-16-03</span> |
+              <span style="color: red">2023-29-03</span>
+            </p>
+            <p>
+              Made myself available during ASUU strike and COVID-19 which took
+              abou 2 years from 2020 March - 2023 March. <br />
+              And also whenever I was free since I was already rounding up with
+              school.
+            </p>
+            <p>
+              Attending to walk in patients requesting laboratory testing
+              services. <br />Conduct lab testing relating to Malaria, typhoid,
+              HIV and genotype, blood group, urinalysis, andsyphilis etc.
+              <br />Sterilize and prepare laboratory equipment. <br />Cleaning
+              of laboratory equipment’s after testing. <br />Calling patients to
+              pick up test results. <br />Observe lab scientist during critical
+              laboratory testing. Peak
+            </p>
+          </div>
+
+          <div class="Globetech">
+            <h5>Globetech Remedial Nigeria Limited</h5>
+            <br />
+            <p>Operations Assistant | Data Analyst (NYSC)</p>
+            <p>Internship</p>
+            <p>Lagos, Nigeria</p>
+            <p>9 Months</p>
+            <p>
+              <span style="color: green">2023-05-09</span> |
+              <span style="color: red">2024-22-05</span>
+            </p>
+
+            <p>
+              Collaborate with operations team to analyze existing processes and
+              identify areas of improvement. <br />Assist in gathering and
+              analyzing operational data to prepare reports and provide insight
+              to the operational team. <br />Help identify trends and areas of
+              improvement based on data. <br />Provide assistance to the
+              handling of hazardous wastes and making sure the team is well
+              protected.
+            </p>
+          </div>
+        </div>
+
+        <div class="education">
+          <h3 style="color: purple">Education----------</h3>
+          <br />
+          <h5>Ekiti State University</h5>
+          <p>Degree | Bsc - Biochemistry</p>
+          <p>
+            <span style="color: green">2015</span> |
+            <span style="color: red">2023</span>
+          </p>
+
+          <h5>Baze University - IDEAS PROGRAM</h5>
+          <p>Diploma | Professional Diploma in Data Analytics</p>
+          <p>
+            <span style="color: green">2024-April</span> |
+            <span style="color: red">Ongoing</span>
+          </p>
+          <p>Duration = 1 year (6 month Learning + 6 month Internship)</p>
+        </div>
+
+        <div class="Certification">
+          <h3 style="color: orangered">Certificates---------</h3>
+          <br />
+          <h5>Coursera</h5>
+          <p>Google Data Analytics</p>
+          <ul>
+            <li>Introduction to Data Analytics</li>
+            <li>Visualization</li>
+            <li>Foundation: Data, Data, Everywhere</li>
+            <li>Data Analysis with R programming</li>
+            <li>Data Analysis with Python</li>
+            <li>Regression Analysis: Simplify Complex Data Relationships</li>
+          </ul>
+          <p>SQL for Data Science</p>
+
+          <p>IBM</p>
+          <ul>
+            <li>Business intelligence - Ongoing</li>
+            <li>Advance Data Visualization with Tableau</li>
+          </ul>
+
+          <p>Microsoft</p>
+          <ul>
+            <li>Microsoft Power BI Data Analyst Professional Certificate</li>
+          </ul>
+
+          <p>
+            <span style="color: green">2015</span> |
+            <span style="color: red">2023</span>
+          </p>
+
+          <h5>The Knights of Safety</h5>
+          <ul>
+            <li>Safety Data Sheet Awareness Certificate</li>
+            <li>Health and Safety Induction</li>
+          </ul>
+
+          <h5>Ongoing</h5>
+          <ul>
+            <li>Dekotech - Fullstack Software Development</li>
+            <li>IBM - Business intelligence</li>
+            <li>Microsoft - Power BI</li>
+          </ul>
+        </div>
+
+        <div class="Skills">
+          <h3 style="color: rgb(73, 8, 59)">Skills---------</h3>
+          <h5>Data Analytics</h5>
+          <ul>
+            <li>Microsoft Excel / Google Sheets</li>
+            <li>Microsoft Power BI</li>
+            <li>Microsoft Powerpoint</li>
+            <li>Microsoft Word</li>
+            <li>MySQL</li>
+            <li>Tableau</li>
+            <li>Looker Studio</li>
+            <li>R for Data analysis</li>
+            <li>Python for Data analysis</li>
+          </ul>
+          <h5>Web Development</h5>
+          <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+          </ul>
+          <h5>Soft Skills</h5>
+          <ul>
+            <li>Good Communication skill</li>
+            <li>Good Presentation skill</li>
+            <li>Office Safety</li>
+            <li>Driving</li>
+          </ul>
+        </div>
+      </header>
 
       <!-- Footer Start -->
       <div
