--- a/index.html
+++ b/index.html
@@ -93,22 +93,7 @@
                   <a href="powerpoint.html" class="dropdown-item">POWERPOINT</a>
                 </div>
               </div>
-              <div class="nav-item dropdown">
-                <a
-                  href="#"
-                  class="nav-link dropdown-toggle"
-                  data-bs-toggle="dropdown"
-                  >About</a
-                >
-                <div class="dropdown-menu rounded-0 m-0">
-                  <a href="education.html" class="dropdown-item">Education</a>
-                  <a href="work.html" class="dropdown-item"
-                    >Working Experience</a
-                  >
-                  <a href="skills.html" class="dropdown-item">Skills</a>
-                  <a href="about.html" class="dropdown-item">About</a>
-                </div>
-              </div>
+
               <div class="nav-item dropdown">
                 <a
                   href="#"
@@ -134,12 +119,10 @@
       <div class="container-fluid header bg-white p-0">
         <div class="row g-0 align-items-center flex-column-reverse flex-md-row">
           <div class="col-md-6 p-5 mt-lg-5">
-            <h1 class="display-5 animated fadeIn mb-4">
+            <h2 class="display-5 animated fadeIn mb-4" style="margin-top: 3rem;">
               A Data Analyst <span class="text-primary">And</span> Business
-              Analyst <br /><span style="color: green"
-                >: Your Data, Your Story</span
-              >
-            </h1>
+              Analyst, Environmentalist and laboratory Technician
+            </h2>
             <p class="animated fadeIn mb-4 pb-2">
               Allow me to Unleash the power of your data. As a data analyst and
               business analyst, I transform raw information into actionable
@@ -204,11 +187,7 @@
             style="max-width: 600px"
           >
             <h1 class="mb-3">I Can Help You With</h1>
-            <p>
-              Eirmod sed ipsum dolor sit rebum labore magna erat. Tempor ut
-              dolore lorem kasd vero ipsum sit eirmod sit. Ipsum diam justo sed
-              rebum vero dolor duo.
-            </p>
+            <p></p>
           </div>
           <div class="row g-4">
             <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.1s">
@@ -335,22 +314,18 @@
           </div>
           <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
             <h1 class="mb-4">#1 The Perfect Person to handle your data</h1>
-            <p class="mb-4">
-              Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu
-              diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet
-              lorem sit clita duo justo magna dolore erat amet
+            <p class="mb-4"></p>
+            <p>
+              <i class="fa fa-check text-primary me-3"></i>Fair and Correct
+              Analysis
             </p>
             <p>
-              <i class="fa fa-check text-primary me-3"></i>Tempor erat elitr
-              rebum at clita
+              <i class="fa fa-check text-primary me-3"></i>Data Safeguarding and
+              Intergrity
             </p>
             <p>
-              <i class="fa fa-check text-primary me-3"></i>Aliqu diam amet diam
-              et eos
-            </p>
-            <p>
-              <i class="fa fa-check text-primary me-3"></i>Clita duo justo magna
-              dolore erat amet
+              <i class="fa fa-check text-primary me-3"></i>Compelling
+              Visualization
             </p>
             <a class="btn btn-primary py-3 px-5 mt-3" href="">Read More</a>
           </div>
