--- a/trade2023.html
+++ b/trade2023.html
@@ -221,11 +221,7 @@
               </div>
             </div>
           </div>
-          <img
-            src="my images/analysis/new im.jpg"
-            alt=""
-            style="width: 100%; margin-top: -2rem"
-          />
+          <img src="my images/analysis/new im.jpg" alt="" style="width: 100%" />
         </div>
       </section>
       <!------trade import end-->
