--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto">
-              <a href="CV.html" class="nav-item nav-link active">C.V</a>
+              <a href="cv.html" class="nav-item nav-link active">C.V</a>
               <a href="project.html" class="nav-item nav-link">PROJECT</a>
               <div class="nav-item dropdown">
                 <a
